 o Removed deprecated classes / methods and features which are now supported by the JDK
 o Replaced Buffer interface with java.util.Queue
 o Added concept of split maps with respective interfaces Put / Get (see also package splitmap)
 o Added new Trie interface together with an implementation of a Patricia Trie


Changes since 4.0-alpha1
------------------------

 o [COLLECTIONS-499] Refactored the test framework for Bag implementations to extend from
                     "AbstractCollectionTest" by decorating the concrete Bag instance with
                     a CollectionBag or CollectionSortedBag. 
 o [COLLECTIONS-498] "CollectionBag" will now also respect the contract of the decorated bag in case
                     a null argument is provided to either removeAll or retainAll.
 o [COLLECTIONS-497] Added bag decorator "CollectionSortedBag" which decorates a SortedBag to make it
                     comply with the Collection contract.
 o [COLLECTIONS-496] "UnmodifiableBoundedCollection" does now also implement the marker interface "Unmodifiable"
                     similar as all other unmodifiable decorators.
 o [COLLECTIONS-495] "UnmodifiableTrie#unmodifiableTrie(Trie)" will not decorate again an already unmodifiable Trie.
                     Also the return type has been changed to "Trie" to be consistent with other Unmodifiable decorators.
 o [COLLECTIONS-494] Moved "Equator" interface to base package for consistency. Thanks to Emmanuel Bourg.
 o [COLLECTIONS-488] Added "CollectionsUtils#matchesAll(Iterable, Predicate)" to test if all elements
                     of a collection match a given predicate. Thanks to Josh Cain.
 o [COLLECTIONS-485] Accept wildcard input where possible, e.g. in copy-constructors, Unmodifiable* decorators
                     and iterators. Thanks to Hollis Waite.
 o [COLLECTIONS-481] No collision detection/resolution was performed when calling "CompositeSet#addComposited(...)"