@@ -21,7 +21,7 @@
   </properties>
   <body>
 
-  <release version="4.0" date="2013-11-15" description="
+  <release version="4.0" date="2013-11-18" description="
 This is a major release: It combines bug fixes, new features and
 changes to existing features.
 
@@ -38,6 +38,10 @@ Commons Collections is Java 5.
 Users are encouraged to upgrade to this version as, in addition to new
 features, this release includes numerous bug fixes.
   ">
+    <action issue="COLLECTIONS-500" dev="tn" type="update">
+      Renamed "V MultiMap#remove(K, V)" to "boolean MultiMap#removeMapping(K, V)"
+      to avoid future conflicts with a default method of the Map interface in Java 8.
+    </action>
     <action issue="COLLECTIONS-499" dev="tn" type="update">
       Refactored the test framework for Bag implementations to extend from
       "AbstractCollectionTest" by decorating the concrete Bag instance with
